# 837p_claims_processor

./: .env.example  .gitignore  Dockerfile  PERFORMANCE_OPTIMIZATION.md  README.md  README_LOGGING.md  README_PROCESSING.md  check_claim_distribution.py  check_claims_simple.sql  docker-compose.monitoring.yml  docker-compose.yml  fix_facilities.sql  fix_provider_constraint.sql  optimize_postgres.sql  performance_dashboard.py  process_claims_complete.py  process_claims_optimized.py  process_claims_reprocess.py  process_claims_simple.py  process_pending_claims.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  reset_claims.sql  run_claims_processing.py  setup_batch_processing.py  simple_api.py  test_schema_syntax.sql  transfer_claims_to_sqlserver.py
.claude/: settings.local.json
claims_ui/: README.md  requirements.txt  run.py
claims_ui/app/: __init__.py  callbacks.py  db_connector.py  layout.py
claims_ui/app/assets/: style.css
claims_ui/app/layouts/: failed_claims_layout.py  healthcare_analytics_layout.py  processed_claims_layout.py  processing_metrics_layout.py
claims_ui/app/queries/: __init__.py  claims_queries.py  (+1 more)
config/: .env.example  __init__.py
config/environments/: development.py  production.py  staging.py
database/: materialized_views.sql  postgresql_claims_processing_schema.sql  postgresql_schema.sql  postgresql_smart_pro_claims_schema.sql  sqlserver_schema.sql
docs/: DEADLOCK_FIXES.md  MEMCACHED_MIGRATION.md  ML_OPTIMIZATION.md  POSTGRES_CLAIMS_ARCHITECTURE.md  README.md  project_overview.md
docs/api/: api-overview.md
docs/architecture/: system-overview.md
docs/deployment/: configuration.md  installation.md  windows-server-deployment.md
docs/optimization/: cache-optimization.md  database-optimization.md  ml-optimization.md  predictive-scaling.md
docs/security/: hipaa-compliance.md
docs/testing/: testing-strategy.md
frontend/: package.json
frontend/src/: App.tsx
monitoring/alerting/: prometheus_alerts.yml
monitoring/prometheus/: prometheus.yml
scripts/: README_DATABASE_SETUP.md  README_PIPELINE_RUNNER.md  README_POSTGRES_CLAIMS.md  README_SAMPLE_DATA.md  deploy.sh  example_usage.sh  load_postgres_claims.sh  load_postgres_example.py  load_sample_data.ps1  load_sample_data.py  load_sample_data_postgres.py  log_management.py  requirements_sample_data.txt  run_pipeline.py  setup_database.ps1  setup_database.py  setup_database_postgres_only.py  setup_postgres_for_claims.py  sql_server_deadlock_fix.sql
src/: __init__.py
src/analytics/: __init__.py  claims_analytics.py
src/api/: __init__.py  main.py  production_main.py
src/cache/: __init__.py  redis_cache.py
src/core/: __init__.py
src/database/: query_optimizer.py
src/monitoring/: performance_monitor.py
src/processing/: __init__.py  parallel_pipeline.py
tests/: conftest.py
tests/integration/: test_api_endpoints.py  test_batch_processing.py
tests/performance/: test_system_performance.py
tests/security/: test_hipaa_compliance.py
tests/unit/: test_validation_engine.py
(+46 files in other folders)
